# nix-filter-copy

./: .gitignore  flake.nix  package.nix  pyproject.toml
nix_filter_copy/: __main__.py
